--- a/demo/index.html
+++ b/demo/index.html
@@ -4,21 +4,21 @@
 
 <style>
   body {
+    max-width: 50em;
     font-family: Georgia;
   }
 
   .ProseMirror-menubar-wrapper {
     border: 1px solid silver;
     outline: none;
-    width: 100%;
+  }
+
+  .ProseMirror {
+    padding: 5px 15px;
   }
 
   .ProseMirror table {
     margin: 0;
-  }
-
-  :focus-visible {
-    outline: none;
   }
 
   .ProseMirror th,
@@ -28,25 +28,21 @@
     padding: 3px 5px;
   }
 
+  .ProseMirror .tableWrapper {
+    margin: 1em 0;
+  }
+
   .ProseMirror th {
     font-weight: bold;
     text-align: left;
   }
-
-  .ProseMirror .selectedCell:after {
-    z-index: 2;
-    position: absolute;
-    content: '';
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: rgba(200, 200, 255, 0.4); /* 这里修改颜色和透明度 */
-    pointer-events: none;
-  }
 </style>
 
+<h1>Table demo</h1>
+
 <div style="display: none" id="content">
+  <h2>Example content</h2>
+  <p>The table:</p>
   <table>
     <tr>
       <th colspan="3" data-colwidth="100,0,0">Wide header</th>
