feat: 移除冗余代码，优化表格功能，添加行列按钮插件

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,8 @@
     font-family: Georgia;
   }
 
-  .ProseMirror-menubar-wrapper {
+  .ProseMirror-menubar-wrapper,
+  #editor {
     border: 1px solid silver;
     outline: none;
   }
@@ -42,8 +43,6 @@
 <h1>Table demo</h1>
 
 <div style="display: none" id="content">
-  <h2>Example content</h2>
-  <p>The table:</p>
   <table>
     <tr>
       <td>One</td>
