feat: 添加单元格内部按钮插件，支持在表格第一行和第一列添加操作按钮，提升用户交互体验

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,10 @@
     height: 100vh;
   }
 
+  #editor {
+    width: fit-content;
+  }
+
   .table-container {
     max-width: 30em;
     padding: 40px;
