--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
   }
 
   #editor {
@@ -17,7 +18,7 @@
 
   .table-container {
     max-width: 30em;
-    padding: 40px;
+    padding: 0px;
   }
 
   .ProseMirror {
