feat: 优化表格样式和列宽设置，提升用户体验

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf8" />
-<title>Table demo</title>
+<title>Table</title>
 
 <style>
   body {
@@ -12,59 +12,25 @@
     overflow: hidden;
     cursor: grabbing;
   }
-
-  #editor {
-    width: fit-content;
-  }
-
-  .table-container {
-    max-width: 30em;
-    padding: 0px;
-  }
-
-  .ProseMirror {
-    font-size: 14px;
-    padding: 2px;
-  }
-
-  .ProseMirror:focus-visible {
-    outline: none;
-  }
-
-  .ProseMirror table {
-    margin: 0;
-  }
-
-  .ProseMirror th,
-  .ProseMirror td {
-    min-width: 1em;
-    border: 1px solid #dedede;
-    padding: 0px 5px;
-  }
-
-  .ProseMirror th {
-    font-weight: bold;
-    text-align: left;
-    background-color: rgb(247, 246, 243);
-  }
-
-  .ProseMirror p {
-    margin: 7px 0;
-  }
 </style>
 
 <main class="table-container">
   <div style="display: none" id="content">
     <table>
       <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
     </table>
   </div>
